--- a/xNube/Gemfile
+++ b/xNube/Gemfile
@@ -35,6 +35,7 @@ gem 'jbuilder', '~> 2.5'
 
 
 gem 'nokogiri', '~> 1.6', '>= 1.6.8'
+gem 'will_paginate', '~> 3.1', '>= 3.1.6'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
